Update and rename style.css to style.scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{pages-themes/cayman@v0.2.0}}";
+@import "{{remote_theme: pages-themes/cayman@v0.2.0}}";
 
 /* Center the header content */
 .page-header {
