--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,6 @@
 ---
 ---
-
-@import "{{pages-themes/cayman@v0.2.0}}";
+@import "{{cayman@v0.2.0}}";
 
 /* Center the header content */
 .page-header {
