--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,7 +51,7 @@
   margin-bottom: 1rem;
 }
 
-/* Responsivo */
+/* Responsive */
 @media (max-width: 600px) {
   .profile-card {
     flex-direction: column;
