--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,14 +12,14 @@
 /* Ficha de presentación */
 .profile-card {
   display: flex;
-  gap: 2rem;
+  gap: 0.5rem;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem;
   background-color: #f5f5f5;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   margin-top: 2rem;
-  flex-wrap: wrap; /* responsivo */
+  flex-wrap: wrap; /* responsive */
 }
 
 /* Imagen de perfil */
