--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,12 @@
 }
 
 /* Texto */
+.about-me {
+  margin-bottom: 1rem;
+  font-weight: normal;
+  color: #159957;
+}
+
 .profile-info {
   flex: 1;
   min-width: 250px;
