--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,10 @@
   justify-content: center;
 }
 
+.project-tagline{
+  margin-bottom: 0
+}
+
 /* Ficha de presentación */
 .profile-card {
   display: flex;
