--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,6 +68,12 @@
     color: #159957;
 }
 
+.profile-info p {
+    margin-bottom: 1rem;
+    color: #155b95;
+}
+
+/* General Transformation */
 .ul-to-tag {
   list-style: none;
   padding: 0;
