--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -77,7 +77,7 @@
 .projects {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0rem;
   margin-top: 3rem;
 }
 
@@ -97,6 +97,12 @@
   flex: 1 1 300px;
 }
 
+.project-info p {
+    margin-bottom: 1rem;
+    color: #155b95;
+}
+
+
 .project-img {
   flex: 1 1 250px;
   text-align: center;
@@ -112,15 +118,17 @@
   display: inline-block;
   margin-top: 0.5rem;
   text-decoration: none;
-  background-color: #007acc;
-  color: #fff;
-  padding: 0.4rem 0.8rem;
-  border-radius: 4px;
+  background-color: #e1e4e8bf;
+  color: #474d57;
+  padding: 0.1rem 0.4rem;
+  border-radius: 5px;
   font-size: 0.9rem;
 }
 
 .take-look:hover {
-  background-color: #005f99;
+  background-color: black;
+  color: white;
+  text-decoration: none;
 }
 
 
