--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -185,6 +185,9 @@
   
 }
 
-footer {
-  display: none;
+.site-footer {
+    padding-top: 2rem;
+    margin-top: 2rem;
+    border-top: solid 1px #eff0f1;
+    display: none;
 }
