--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -90,7 +90,7 @@
   display: flex;
   flex-direction: column;
   gap: 0rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 /* PROJECT BOX */
@@ -102,6 +102,7 @@
   gap: 2rem;
   border: 1px solid #ddd;
   padding: 1.5rem;
+  margin-bottom: 1.5rem;
   border-radius: 8px;
   background-color: #fdfdfd;
   
