Adding more pages info

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,6 +171,22 @@
 
 
 /* =======================
+	PROYECTS PAGES SECTION 
+========================*/
+
+/* Mission P */
+.project-mision p {
+    margin-bottom: 1rem;
+    color: #155b95;
+}
+
+/* project info P */
+.pages-project-info p {
+    margin-bottom: 1rem;
+    color: #155b95;
+}
+
+/* =======================
 	GENERAL STYLES TRANS 
 ========================*/
 
