--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -195,13 +195,14 @@
   height: 1em;         /* same text height */
   vertical-align: middle;
   margin-left: 0em;
+}
 
 /* HOME ICO */
 .logo-home {
   height: 2em;         
   vertical-align: middle;
   margin-left: 0em;
-
+}
 
 /* UL TO TAGS */
 .ul-to-tag {
